--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                             <li>SASS разбит на разные логические файлы</li>
                             <li>Использован @mixin для кнопок</li>
                             <li>Потроганы CSS-функции min(), max(), clamp()</li>
+                            <li>Использован GitKraken вместо терминала</li>
                         </ul>
                     </div>
                     <div class="block__content-links">
