--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         </ul>
                     </div>
                     <div class="block__content-links">
-                        <button class="btn-pink" disabled>Вы уже здесь</button><!----><button class="btn-white">Открыть на GitHub</button>
+                        <button class="btn-pink" disabled>Вы уже здесь</button><!----><button class="btn-white"><a href="https://github.com/Iren-Ko/study-index">Открыть на GitHub</a></button>
                     </div>
                 </div>
             </div>
